--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 :root {
   --brown: #867070;
   --dark: #694e4e;
@@ -22,7 +22,7 @@ body {
   font-size: 2.4rem;
   font-family: sans-serif;
   color: var(--dark);
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-weight: 500;
   display: flex;
   justify-content: center;
@@ -40,7 +40,7 @@ body {
 h1 {
   text-align: center;
   background-color: var(--orange1);
-  font-family: 'Monoton';
+  font-family: "Monoton";
   font-size: 6rem;
   text-transform: uppercase;
   font-weight: 400;
@@ -108,12 +108,9 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
   gap: 1.2rem;
 }
 
@@ -121,10 +118,9 @@ input {
   gap: 1.2rem;
 }
 
-input[type='checkbox'] {
+input[type="checkbox"] {
   height: 2rem;
   width: 2rem;
-  accent-color: var(--orange);
 }
 
 .list li button {
