--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@
   --orange1: #faab78;
   --orange2: #ffdca9;
   --light: #fdf7ee;
+
+  --title-size1: 4rem;
+  --title-size2: 2rem;
+  --text-size1: 1.7rem;
+  --text-size2: 1rem;
+  --text-size3: 0.5rem;
 }
 
 * {
@@ -19,7 +25,6 @@ html {
 }
 
 body {
-  font-size: 2.4rem;
   font-family: sans-serif;
   color: var(--dark);
   font-family: "Quicksand";
@@ -30,37 +35,37 @@ body {
 
 .app {
   width: 100%;
-  height: 100vh;
-  display: grid;
-  grid-template-rows: auto auto 1fr auto;
-  margin: 2rem;
-  padding: 1rem;
+  /* display: grid;
+  grid-template-rows: auto auto 1fr auto; */
+  margin: 1rem;
+  padding: 0.5rem;
 }
 
 h1 {
   text-align: center;
   background-color: var(--orange1);
   font-family: "Monoton";
-  font-size: 6rem;
+  font-size: var(--title-size1);
   text-transform: uppercase;
   font-weight: 400;
   word-spacing: 30px;
   letter-spacing: -5px;
-  padding: 2.4rem 0;
+  padding: 1.4rem 0;
 }
 
 .add-form {
   background-color: var(--orange2);
-  padding: 2.8rem 0;
+  padding: 1.4rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0.8rem;
+  gap: 1rem;
+  font-size: var(--text-size2);
 }
 
 h3 {
   margin-right: 1.6rem;
-  font-size: 2.4rem;
+  font-size: var(--title-size2);
 }
 
 button,
@@ -73,7 +78,7 @@ input {
   border-radius: 10rem;
   padding: 1.2rem 3.2rem;
   font-weight: 700;
-  font-size: 1.8rem;
+  font-size: var(--text-size1);
   cursor: pointer;
 }
 
@@ -100,7 +105,7 @@ input {
 .list select {
   text-transform: uppercase;
   padding: 0.8rem 2.4rem;
-  font-size: 1.2rem;
+  font-size: var(--text-size2);
   font-weight: 700;
   margin: 0 0.8rem;
 }
@@ -116,6 +121,7 @@ input {
 
 .list li {
   gap: 1.2rem;
+  font-size: var(--text-size1);
 }
 
 input[type="checkbox"] {
@@ -127,7 +133,7 @@ input[type="checkbox"] {
   cursor: pointer;
   background: none;
   border: none;
-  font-size: 1.8rem;
+  font-size: var(--text-size1);
   padding: 0.8rem;
   transform: translateY(2px);
 }
@@ -137,4 +143,5 @@ input[type="checkbox"] {
   text-align: center;
   font-weight: 700;
   padding: 3.2rem 0;
+  font-size: var(--text-size1);
 }
